Adjust timer to fit on mobile view issue #258

--- a/css/styles.css
+++ b/css/styles.css
@@ -10187,7 +10187,6 @@ div.desc {
     
     .countdown-text{
       color: #FFD524;
-      font-size: 30px;;
       font-size: 50px;
       text-shadow: 3px 3px #55185D;
      }
@@ -10210,31 +10209,54 @@ div.desc {
       margin-right: 0; /* Remove margin from the last item */
     }
     
-    .days{
-      color: #FFFFFF;
-      font-size: 120px;
-      text-shadow: 3px 3px #55185D;
-    }
-    .hours{
-      color: #FFFFFF;
-      font-size: 120px;
-      text-shadow: 3px 3px #55185D;
-    }
-
-    .minutes{
-      color: #FFFFFF;
-      font-size: 120px;
-      text-shadow: 2px 2px #55185D;
-    }
-
+    .days, .hours, .minutes,
     .seconds{
       color: #FFFFFF;
       font-size: 120px;
       text-shadow: 3px 3px #55185D;
+      margin-left: 30px;
+      margin-right: 30px;
     }
-
+   
     .yt-text{
       font-size: 25px;
       color: #FFD524;
       text-shadow: 3px 3px #55185D;
+    }
+
+    @media (max-width: 768px) {
+      .countdown {
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .countdown li {
+        margin: 0px 0; /* Adjust the spacing for mobile view */
+      }
+
+      
+      #countdown ul {
+      list-style: none;
+      margin-left: -60px;
+      margin-right: -50px;
+      }
+
+      .days, .hours, .minutes,
+      .seconds{ 
+        color: #FFFFFF;
+        font-size: 40px;
+        text-shadow: 3px 3px #55185D;
+      }
+      .countdown-text{
+        color: #FFD524;
+        font-size: 38px;
+        text-shadow: 3px 3px #55185D;
+       }
+     
+       #countdown ul li {
+        margin-right: 0px; /* Adjust spacing between elements */
+        font-size: 20px; /* Customize font size */
+     
+      }
+      
     }
